test/objects/Match_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Alcohol__c</fullName>
        <label>Alcohol</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Does not matter</fullName>
                    <label>Doesn&apos;t matter</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Min Income(Annually)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diet__c</fullName>
        <label>Diet</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eggetarian</fullName>
                </value>
                <value>
                    <fullName>Non-Veg</fullName>
                </value>
                <value>
                    <fullName>Occasionally Non-Veg</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
                <value>
                    <fullName>Open to All</fullName>
                </value>
                <value>
                    <fullName>Jain</fullName>
                    <isActive>false</isActive>
                    <label>Jain</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Smoke__c</fullName>
        <label>Does Smoke?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Does not matter</fullName>
                    <label>Doesn&apos;t matter</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethinicity__c</fullName>
        <label>Ethinicity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Having_Children__c</fullName>
        <label>Having Children</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes - Not Living together</fullName>
                </value>
                <value>
                    <fullName>Yes - Living Together</fullName>
                </value>
                <value>
                    <fullName>Does not matter</fullName>
                    <label>Doesn&apos;t matter</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_Qualification__c</fullName>
        <label>Highest Qualification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Associates Degree</fullName>
                </value>
                <value>
                    <fullName>Bachelors</fullName>
                </value>
                <value>
                    <fullName>Diploma</fullName>
                </value>
                <value>
                    <fullName>Doctorate</fullName>
                </value>
                <value>
                    <fullName>Engineering/Technology</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Honours Degree</fullName>
                </value>
                <value>
                    <fullName>Less than high school</fullName>
                </value>
                <value>
                    <fullName>Masters</fullName>
                </value>
                <value>
                    <fullName>Post Graduation</fullName>
                </value>
                <value>
                    <fullName>Trade School</fullName>
                </value>
                <value>
                    <fullName>Under graduate</fullName>
                </value>
                <value>
                    <fullName>Open to All</fullName>
                    <label>Open to all</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Looking_for_Gender__c</fullName>
        <formula>TEXT(Profile__r.Opposite_Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Looking for Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Status__c</fullName>
        <label>Marital Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unmarried</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Awaiting Divorce</fullName>
                </value>
                <value>
                    <fullName>Annulled</fullName>
                </value>
                <value>
                    <fullName>Open to All</fullName>
                    <label>Open to all</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Age__c</fullName>
        <label>Max Age</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Age_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Height__c</fullName>
        <label>Max Height</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Height_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Min_Age__c</fullName>
        <label>Min Age</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Age_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Min_Height__c</fullName>
        <label>Min Height</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Height_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mother_Tongue__c</fullName>
        <label>Mother Tongue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Children__c</fullName>
        <label>No. of Children</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Having_Children__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>more than 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Area__c</fullName>
        <inlineHelpText>Enter Profession name like Software Developer</inlineHelpText>
        <label>Professional Area</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profile Name</label>
        <referenceTo>Profile__c</referenceTo>
        <relationshipLabel>Match Preferences</relationshipLabel>
        <relationshipName>Match_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buddhist</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Hindu</fullName>
                </value>
                <value>
                    <fullName>Jain</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Muslim</fullName>
                </value>
                <value>
                    <fullName>Parsi</fullName>
                </value>
                <value>
                    <fullName>Sikh</fullName>
                </value>
                <value>
                    <fullName>Spiritual</fullName>
                </value>
                <value>
                    <fullName>No Religion</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Open to All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skin_Tone_Complexion__c</fullName>
        <label>Skin Tone/Complexion</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Light Neutral</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Wheatish</fullName>
                </value>
                <value>
                    <fullName>Exotic</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Dark Brown</fullName>
                </value>
                <value>
                    <fullName>Toffee</fullName>
                </value>
                <value>
                    <fullName>Open to All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_s_your_expectation__c</fullName>
        <label>What&apos;s your expectation ?</label>
        <length>12768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Working_with__c</fullName>
        <label>Working with</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private Company</fullName>
                </value>
                <value>
                    <fullName>Government/Public Sector</fullName>
                </value>
                <value>
                    <fullName>Defence/Civil Sector</fullName>
                </value>
                <value>
                    <fullName>Business/ Self Employed</fullName>
                </value>
                <value>
                    <fullName>Not Working</fullName>
                </value>
                <value>
                    <fullName>Open to All</fullName>
                    <label>Open to all</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zodiac__c</fullName>
        <label>Zodiac</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aries/Mesh</fullName>
                </value>
                <value>
                    <fullName>Taurus/Vrishabh</fullName>
                </value>
                <value>
                    <fullName>Gemini/Mithuna</fullName>
                </value>
                <value>
                    <fullName>Cancer/Karka</fullName>
                </value>
                <value>
                    <fullName>Leo/Simha</fullName>
                </value>
                <value>
                    <fullName>Virgo/Kanya</fullName>
                </value>
                <value>
                    <fullName>Libra/Tula</fullName>
                </value>
                <value>
                    <fullName>Scorpio/Vrishchik</fullName>
                </value>
                <value>
                    <fullName>Sagittarius/Dhanu</fullName>
                </value>
                <value>
                    <fullName>Capricorn/Makar</fullName>
                </value>
                <value>
                    <fullName>Aquarius/Kumbha</fullName>
                </value>
                <value>
                    <fullName>Pisces/Meena</fullName>
                </value>
                <value>
                    <fullName>Does not matter</fullName>
                    <label>Doesn&apos;t matter</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Match Preference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Profile__c</columns>
        <columns>Religion__c</columns>
        <columns>Highest_Qualification__c</columns>
        <columns>Professional_Area__c</columns>
        <columns>Looking_for_Gender__c</columns>
        <columns>Zodiac__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Match Preferences ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Match Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Age_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( Min_Age__c )    &gt;   TEXT( Max_Age__c )</errorConditionFormula>
        <errorMessage>Min Age Should less than max Age</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Diet</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  INCLUDES( Diet__c ,&quot;Open to All&quot;),
      OR ( INCLUDES(Diet__c ,&quot;Eggetarian&quot;),
           INCLUDES(Diet__c,&quot;Non-Veg&quot;),
           INCLUDES(Diet__c,&quot;Occasionally Non-Veg&quot;),
           INCLUDES(Diet__c,&quot;Veg&quot;),
           INCLUDES(Diet__c,&quot;Vegan&quot;)
           )  
)</errorConditionFormula>
        <errorDisplayField>Diet__c</errorDisplayField>
        <errorMessage>If &quot;Open to All&quot; Value is selected, don&apos;t select any other values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Height_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(  Max_Height__c  )     &lt;    TEXT(  Min_Height__c )</errorConditionFormula>
        <errorMessage>Min height should less than max height</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Highest_Qualification</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  INCLUDES( Highest_Qualification__c ,&quot;Open to All&quot;),
      OR ( INCLUDES(Highest_Qualification__c,&quot;Associates Degree&quot;),
           INCLUDES(Highest_Qualification__c,&quot;Bachelors&quot;),
           INCLUDES(Highest_Qualification__c,&quot;Diploma&quot;),
           INCLUDES(Highest_Qualification__c, &quot;Engineering/Technology&quot;),
           INCLUDES(Highest_Qualification__c, &quot;High School&quot;), 
           INCLUDES(Highest_Qualification__c, &quot;Honours Degree&quot;),
           INCLUDES(Highest_Qualification__c, &quot;Less than high school&quot;), 
           INCLUDES(Highest_Qualification__c, &quot;Masters&quot;),
           INCLUDES(Highest_Qualification__c, &quot;Post Graduation&quot;),
           INCLUDES(Highest_Qualification__c, &quot;Trade School&quot;),
           INCLUDES(Highest_Qualification__c, &quot;Under graduate&quot;) )
    
)</errorConditionFormula>
        <errorDisplayField>Highest_Qualification__c</errorDisplayField>
        <errorMessage>If &quot;Open to All&quot; Value is selected, don&apos;t select any other values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Marital_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  INCLUDES( Material_Status__c ,&quot;Open to All&quot;),
      OR ( INCLUDES(Material_Status__c,&quot;Unmarried&quot;),
           INCLUDES(Material_Status__c,&quot;Divorced&quot;),
           INCLUDES(Material_Status__c,&quot;Widowed&quot;),
           INCLUDES(Material_Status__c, &quot;Awaiting Divorce&quot;),
           INCLUDES(Material_Status__c, &quot;Annulled&quot;) )
    )</errorConditionFormula>
        <errorDisplayField>Material_Status__c</errorDisplayField>
        <errorMessage>If &quot;Open to All&quot; Value is selected, don&apos;t select any other values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Religion</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  INCLUDES( Religion__c ,&quot;Open to All&quot;),
      OR ( INCLUDES(Religion__c,&quot;Hindu&quot;),
           INCLUDES(Religion__c,&quot;Muslim&quot;),
           INCLUDES(Religion__c,&quot;Christian&quot;),
           INCLUDES(Religion__c, &quot;Buddhist&quot;),
           INCLUDES(Religion__c, &quot;Jain&quot;), 
           INCLUDES(Religion__c, &quot;Parsi&quot;),
           INCLUDES(Religion__c, &quot;Sikh&quot;), 
           INCLUDES(Religion__c, &quot;Jewish&quot;),
           INCLUDES(Religion__c, &quot;Spiritual&quot;),
           INCLUDES(Religion__c, &quot;No Religion&quot;),
           INCLUDES(Religion__c, &quot;Others&quot;))  
)</errorConditionFormula>
        <errorDisplayField>Religion__c</errorDisplayField>
        <errorMessage>If &quot;Open to All&quot; Value is selected don&apos;t select any other values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sikn_Tone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  INCLUDES( Skin_Tone_Complexion__c ,&quot;Open to All&quot;),
      OR ( INCLUDES(Skin_Tone_Complexion__c,&quot;Fair&quot;),
           INCLUDES(Skin_Tone_Complexion__c,&quot;Light Neutral&quot;),
           INCLUDES(Skin_Tone_Complexion__c,&quot;Normal&quot;),
           INCLUDES(Skin_Tone_Complexion__c, &quot;Wheatish&quot;),
           INCLUDES(Skin_Tone_Complexion__c, &quot;Exotic&quot;), 
           INCLUDES(Skin_Tone_Complexion__c, &quot;Dark Brown&quot;),
           INCLUDES(Skin_Tone_Complexion__c, &quot;Medium&quot;), 
           INCLUDES(Skin_Tone_Complexion__c, &quot;Masters&quot;),
           INCLUDES(Skin_Tone_Complexion__c, &quot;Toffee&quot;) )
    )</errorConditionFormula>
        <errorDisplayField>Skin_Tone_Complexion__c</errorDisplayField>
        <errorMessage>If &quot;Open to All&quot; Value is selected, don&apos;t select any other values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Working_with</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  INCLUDES( Working_with__c ,&quot;Open to All&quot;),
      OR ( INCLUDES(Working_with__c ,&quot;Private Company&quot;),
           INCLUDES(Working_with__c ,&quot;Defence/Civil Sector&quot;),
           INCLUDES(Working_with__c ,&quot;Business/ Self Employed&quot;),  
           INCLUDES(Working_with__c , &quot;Government/Public Sector&quot;),      
           INCLUDES(Working_with__c , &quot;Not Working&quot;))  
)</errorConditionFormula>
        <errorDisplayField>Working_with__c</errorDisplayField>
        <errorMessage>If &quot;Open to All&quot; Value is selected, don&apos;t select any other values</errorMessage>
    </validationRules>
</CustomObject>